--- a/manifests/core-install/kustomization.yaml
+++ b/manifests/core-install/kustomization.yaml
@@ -11,4 +11,4 @@ resources:
 images:
   - name: quay.io/argoproj/argocd
     newName: quay.io/codefresh/argocd
-    newTag: v2.3.4
+    newTag: latest
