--- a/manifests/ha/base/kustomization.yaml
+++ b/manifests/ha/base/kustomization.yaml
@@ -9,7 +9,7 @@ patchesStrategicMerge:
 images:
   - name: quay.io/argoproj/argocd
     newName: quay.io/codefresh/argocd
-    newTag: v2.3.4
+    newTag: latest
 resources:
   - ../../base/application-controller
   - ../../base/dex
