--- a/manifests/ha/install.yaml
+++ b/manifests/ha/install.yaml
@@ -5483,16 +5483,96 @@ spec:
                                                 syncOptions:
                                                   items:
                                                     type: string
-                                                  type: array
-                                              type: object
-                                          required:
-                                            - destination
-                                            - project
-                                            - source
-                                          type: object
-                                      required:
-                                        - metadata
-                                        - spec
+                                                type: object
+                                              repoURL:
+                                                type: string
+                                              targetRevision:
+                                                type: string
+                                            required:
+                                              - repoURL
+                                            type: object
+                                          syncPolicy:
+                                            properties:
+                                              automated:
+                                                properties:
+                                                  allowEmpty:
+                                                    type: boolean
+                                                  prune:
+                                                    type: boolean
+                                                  selfHeal:
+                                                    type: boolean
+                                                type: object
+                                              retry:
+                                                properties:
+                                                  backoff:
+                                                    properties:
+                                                      duration:
+                                                        type: string
+                                                      factor:
+                                                        format: int64
+                                                        type: integer
+                                                      maxDuration:
+                                                        type: string
+                                                    type: object
+                                                  limit:
+                                                    format: int64
+                                                    type: integer
+                                                type: object
+                                              syncOptions:
+                                                items:
+                                                  type: string
+                                                type: array
+                                            type: object
+                                        required:
+                                          - destination
+                                          - project
+                                          - source
+                                        type: object
+                                    required:
+                                      - metadata
+                                      - spec
+                                    type: object
+                                type: object
+                              scmProvider:
+                                properties:
+                                  bitbucket:
+                                    properties:
+                                      allBranches:
+                                        type: boolean
+                                      appPasswordRef:
+                                        properties:
+                                          key:
+                                            type: string
+                                          secretName:
+                                            type: string
+                                        required:
+                                          - key
+                                          - secretName
+                                        type: object
+                                      owner:
+                                        type: string
+                                      user:
+                                        type: string
+                                    required:
+                                      - appPasswordRef
+                                      - owner
+                                      - user
+                                    type: object
+                                  cloneProtocol:
+                                    type: string
+                                  filters:
+                                    items:
+                                      properties:
+                                        branchMatch:
+                                          type: string
+                                        labelMatch:
+                                          type: string
+                                        pathsExist:
+                                          items:
+                                            type: string
+                                          type: array
+                                        repositoryMatch:
+                                          type: string
                                       type: object
                                   type: object
                                 scmProvider:
@@ -7283,81 +7363,47 @@ spec:
                                                   type: object
                                                 path:
                                                   type: string
-                                                plugin:
-                                                  properties:
-                                                    env:
-                                                      items:
-                                                        properties:
-                                                          name:
-                                                            type: string
-                                                          value:
-                                                            type: string
-                                                        required:
-                                                          - name
-                                                          - value
-                                                        type: object
-                                                      type: array
-                                                    name:
-                                                      type: string
-                                                  type: object
-                                                repoURL:
-                                                  type: string
-                                                targetRevision:
-                                                  type: string
-                                              required:
-                                                - repoURL
-                                              type: object
-                                            syncPolicy:
-                                              properties:
-                                                automated:
-                                                  properties:
-                                                    allowEmpty:
-                                                      type: boolean
-                                                    prune:
-                                                      type: boolean
-                                                    selfHeal:
-                                                      type: boolean
-                                                  type: object
-                                                retry:
-                                                  properties:
-                                                    backoff:
-                                                      properties:
-                                                        duration:
-                                                          type: string
-                                                        factor:
-                                                          format: int64
-                                                          type: integer
-                                                        maxDuration:
-                                                          type: string
-                                                      type: object
-                                                    limit:
-                                                      format: int64
-                                                      type: integer
-                                                  type: object
-                                                syncOptions:
-                                                  items:
-                                                    type: string
-                                                  type: array
-                                              type: object
-                                          required:
-                                            - destination
-                                            - project
-                                            - source
-                                          type: object
-                                      required:
-                                        - metadata
-                                        - spec
-                                      type: object
-                                  required:
-                                    - elements
-                                  type: object
-                                matrix:
-                                  x-kubernetes-preserve-unknown-fields: true
-                                merge:
-                                  x-kubernetes-preserve-unknown-fields: true
-                                pullRequest:
-                                  properties:
-                                    github:
+                                                type: array
+                                            type: object
+                                        required:
+                                          - destination
+                                          - project
+                                          - source
+                                        type: object
+                                    required:
+                                      - metadata
+                                      - spec
+                                    type: object
+                                type: object
+                              scmProvider:
+                                properties:
+                                  bitbucket:
+                                    properties:
+                                      allBranches:
+                                        type: boolean
+                                      appPasswordRef:
+                                        properties:
+                                          key:
+                                            type: string
+                                          secretName:
+                                            type: string
+                                        required:
+                                          - key
+                                          - secretName
+                                        type: object
+                                      owner:
+                                        type: string
+                                      user:
+                                        type: string
+                                    required:
+                                      - appPasswordRef
+                                      - owner
+                                      - user
+                                    type: object
+                                  cloneProtocol:
+                                    type: string
+                                  filters:
+                                    items:
                                       properties:
                                         api:
                                           type: string
@@ -8596,16 +8642,96 @@ spec:
                                       syncOptions:
                                         items:
                                           type: string
-                                        type: array
-                                    type: object
-                                required:
-                                  - destination
-                                  - project
-                                  - source
-                                type: object
-                            required:
-                              - metadata
-                              - spec
+                                      type: object
+                                    repoURL:
+                                      type: string
+                                    targetRevision:
+                                      type: string
+                                  required:
+                                    - repoURL
+                                  type: object
+                                syncPolicy:
+                                  properties:
+                                    automated:
+                                      properties:
+                                        allowEmpty:
+                                          type: boolean
+                                        prune:
+                                          type: boolean
+                                        selfHeal:
+                                          type: boolean
+                                      type: object
+                                    retry:
+                                      properties:
+                                        backoff:
+                                          properties:
+                                            duration:
+                                              type: string
+                                            factor:
+                                              format: int64
+                                              type: integer
+                                            maxDuration:
+                                              type: string
+                                          type: object
+                                        limit:
+                                          format: int64
+                                          type: integer
+                                      type: object
+                                    syncOptions:
+                                      items:
+                                        type: string
+                                      type: array
+                                  type: object
+                              required:
+                                - destination
+                                - project
+                                - source
+                              type: object
+                          required:
+                            - metadata
+                            - spec
+                          type: object
+                      type: object
+                    scmProvider:
+                      properties:
+                        bitbucket:
+                          properties:
+                            allBranches:
+                              type: boolean
+                            appPasswordRef:
+                              properties:
+                                key:
+                                  type: string
+                                secretName:
+                                  type: string
+                              required:
+                                - key
+                                - secretName
+                              type: object
+                            owner:
+                              type: string
+                            user:
+                              type: string
+                          required:
+                            - appPasswordRef
+                            - owner
+                            - user
+                          type: object
+                        cloneProtocol:
+                          type: string
+                        filters:
+                          items:
+                            properties:
+                              branchMatch:
+                                type: string
+                              labelMatch:
+                                type: string
+                              pathsExist:
+                                items:
+                                  type: string
+                                type: array
+                              repositoryMatch:
+                                type: string
                             type: object
                         type: object
                       scmProvider:
@@ -10951,7 +11077,7 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-          image: quay.io/codefresh/applicationset:v0.4.2
+          image: quay.io/argoproj/argocd-applicationset:latest
           imagePullPolicy: Always
           name: argocd-applicationset-controller
           ports:
@@ -10960,25 +11086,14 @@ spec:
           volumeMounts:
             - mountPath: /app/config/ssh
               name: ssh-known-hosts
-            - mountPath: /app/config/tls
+            - configMap:
+                name: argocd-tls-certs-cm
               name: tls-certs
-            - mountPath: /app/config/gpg/source
+            - configMap:
+                name: argocd-gpg-keys-cm
               name: gpg-keys
-            - mountPath: /app/config/gpg/keys
+            - emptyDir: {}
               name: gpg-keyring
-      serviceAccountName: argocd-applicationset-controller
-      volumes:
-        - configMap:
-            name: argocd-ssh-known-hosts-cm
-          name: ssh-known-hosts
-        - configMap:
-            name: argocd-tls-certs-cm
-          name: tls-certs
-        - configMap:
-            name: argocd-gpg-keys-cm
-          name: gpg-keys
-        - emptyDir: {}
-          name: gpg-keyring
 ---
 apiVersion: apps/v1
 kind: Deployment
