--- a/manifests/namespace-install.yaml
+++ b/manifests/namespace-install.yaml
@@ -1870,16 +1870,96 @@ spec:
                                                 syncOptions:
                                                   items:
                                                     type: string
-                                                  type: array
-                                              type: object
-                                          required:
-                                            - destination
-                                            - project
-                                            - source
-                                          type: object
-                                      required:
-                                        - metadata
-                                        - spec
+                                                type: object
+                                              repoURL:
+                                                type: string
+                                              targetRevision:
+                                                type: string
+                                            required:
+                                              - repoURL
+                                            type: object
+                                          syncPolicy:
+                                            properties:
+                                              automated:
+                                                properties:
+                                                  allowEmpty:
+                                                    type: boolean
+                                                  prune:
+                                                    type: boolean
+                                                  selfHeal:
+                                                    type: boolean
+                                                type: object
+                                              retry:
+                                                properties:
+                                                  backoff:
+                                                    properties:
+                                                      duration:
+                                                        type: string
+                                                      factor:
+                                                        format: int64
+                                                        type: integer
+                                                      maxDuration:
+                                                        type: string
+                                                    type: object
+                                                  limit:
+                                                    format: int64
+                                                    type: integer
+                                                type: object
+                                              syncOptions:
+                                                items:
+                                                  type: string
+                                                type: array
+                                            type: object
+                                        required:
+                                          - destination
+                                          - project
+                                          - source
+                                        type: object
+                                    required:
+                                      - metadata
+                                      - spec
+                                    type: object
+                                type: object
+                              scmProvider:
+                                properties:
+                                  bitbucket:
+                                    properties:
+                                      allBranches:
+                                        type: boolean
+                                      appPasswordRef:
+                                        properties:
+                                          key:
+                                            type: string
+                                          secretName:
+                                            type: string
+                                        required:
+                                          - key
+                                          - secretName
+                                        type: object
+                                      owner:
+                                        type: string
+                                      user:
+                                        type: string
+                                    required:
+                                      - appPasswordRef
+                                      - owner
+                                      - user
+                                    type: object
+                                  cloneProtocol:
+                                    type: string
+                                  filters:
+                                    items:
+                                      properties:
+                                        branchMatch:
+                                          type: string
+                                        labelMatch:
+                                          type: string
+                                        pathsExist:
+                                          items:
+                                            type: string
+                                          type: array
+                                        repositoryMatch:
+                                          type: string
                                       type: object
                                     values:
                                       additionalProperties:
@@ -4040,16 +4120,96 @@ spec:
                                                 syncOptions:
                                                   items:
                                                     type: string
-                                                  type: array
-                                              type: object
-                                          required:
-                                            - destination
-                                            - project
-                                            - source
-                                          type: object
-                                      required:
-                                        - metadata
-                                        - spec
+                                                type: object
+                                              repoURL:
+                                                type: string
+                                              targetRevision:
+                                                type: string
+                                            required:
+                                              - repoURL
+                                            type: object
+                                          syncPolicy:
+                                            properties:
+                                              automated:
+                                                properties:
+                                                  allowEmpty:
+                                                    type: boolean
+                                                  prune:
+                                                    type: boolean
+                                                  selfHeal:
+                                                    type: boolean
+                                                type: object
+                                              retry:
+                                                properties:
+                                                  backoff:
+                                                    properties:
+                                                      duration:
+                                                        type: string
+                                                      factor:
+                                                        format: int64
+                                                        type: integer
+                                                      maxDuration:
+                                                        type: string
+                                                    type: object
+                                                  limit:
+                                                    format: int64
+                                                    type: integer
+                                                type: object
+                                              syncOptions:
+                                                items:
+                                                  type: string
+                                                type: array
+                                            type: object
+                                        required:
+                                          - destination
+                                          - project
+                                          - source
+                                        type: object
+                                    required:
+                                      - metadata
+                                      - spec
+                                    type: object
+                                type: object
+                              scmProvider:
+                                properties:
+                                  bitbucket:
+                                    properties:
+                                      allBranches:
+                                        type: boolean
+                                      appPasswordRef:
+                                        properties:
+                                          key:
+                                            type: string
+                                          secretName:
+                                            type: string
+                                        required:
+                                          - key
+                                          - secretName
+                                        type: object
+                                      owner:
+                                        type: string
+                                      user:
+                                        type: string
+                                    required:
+                                      - appPasswordRef
+                                      - owner
+                                      - user
+                                    type: object
+                                  cloneProtocol:
+                                    type: string
+                                  filters:
+                                    items:
+                                      properties:
+                                        branchMatch:
+                                          type: string
+                                        labelMatch:
+                                          type: string
+                                        pathsExist:
+                                          items:
+                                            type: string
+                                          type: array
+                                        repositoryMatch:
+                                          type: string
                                       type: object
                                     values:
                                       additionalProperties:
@@ -5586,24 +5746,85 @@ spec:
                                       syncOptions:
                                         items:
                                           type: string
-                                        type: array
-                                    type: object
-                                required:
-                                  - destination
-                                  - project
-                                  - source
-                                type: object
-                            required:
-                              - metadata
-                              - spec
-                            type: object
-                        required:
-                          - generators
-                          - mergeKeys
-                        type: object
-                      pullRequest:
-                        properties:
-                          github:
+                                      type: object
+                                    repoURL:
+                                      type: string
+                                    targetRevision:
+                                      type: string
+                                  required:
+                                    - repoURL
+                                  type: object
+                                syncPolicy:
+                                  properties:
+                                    automated:
+                                      properties:
+                                        allowEmpty:
+                                          type: boolean
+                                        prune:
+                                          type: boolean
+                                        selfHeal:
+                                          type: boolean
+                                      type: object
+                                    retry:
+                                      properties:
+                                        backoff:
+                                          properties:
+                                            duration:
+                                              type: string
+                                            factor:
+                                              format: int64
+                                              type: integer
+                                            maxDuration:
+                                              type: string
+                                          type: object
+                                        limit:
+                                          format: int64
+                                          type: integer
+                                      type: object
+                                    syncOptions:
+                                      items:
+                                        type: string
+                                      type: array
+                                  type: object
+                              required:
+                                - destination
+                                - project
+                                - source
+                              type: object
+                          required:
+                            - metadata
+                            - spec
+                          type: object
+                      type: object
+                    scmProvider:
+                      properties:
+                        bitbucket:
+                          properties:
+                            allBranches:
+                              type: boolean
+                            appPasswordRef:
+                              properties:
+                                key:
+                                  type: string
+                                secretName:
+                                  type: string
+                              required:
+                                - key
+                                - secretName
+                              type: object
+                            owner:
+                              type: string
+                            user:
+                              type: string
+                          required:
+                            - appPasswordRef
+                            - owner
+                            - user
+                          type: object
+                        cloneProtocol:
+                          type: string
+                        filters:
+                          items:
                             properties:
                               api:
                                 type: string
@@ -7185,7 +7406,7 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-          image: quay.io/codefresh/applicationset:v0.4.2
+          image: quay.io/argoproj/argocd-applicationset:latest
           imagePullPolicy: Always
           name: argocd-applicationset-controller
           ports:
@@ -7194,25 +7415,14 @@ spec:
           volumeMounts:
             - mountPath: /app/config/ssh
               name: ssh-known-hosts
-            - mountPath: /app/config/tls
+            - configMap:
+                name: argocd-tls-certs-cm
               name: tls-certs
-            - mountPath: /app/config/gpg/source
+            - configMap:
+                name: argocd-gpg-keys-cm
               name: gpg-keys
-            - mountPath: /app/config/gpg/keys
+            - emptyDir: {}
               name: gpg-keyring
-      serviceAccountName: argocd-applicationset-controller
-      volumes:
-        - configMap:
-            name: argocd-ssh-known-hosts-cm
-          name: ssh-known-hosts
-        - configMap:
-            name: argocd-tls-certs-cm
-          name: tls-certs
-        - configMap:
-            name: argocd-gpg-keys-cm
-          name: gpg-keys
-        - emptyDir: {}
-          name: gpg-keyring
 ---
 apiVersion: apps/v1
 kind: Deployment
