--- a/test/e2e/testdata/crd-creation/crd-instances.yaml
+++ b/test/e2e/testdata/crd-creation/crd-instances.yaml
@@ -10,7 +10,7 @@ spec:
 apiVersion: argoproj.io/v1alpha1
 kind: Dummy
 metadata:
-  name: dummy-crd-instance2
+  name: dummy-crd-instance
   namespace: kube-system
 ---
 apiVersion: argoproj.io/v1alpha1
