--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -355,7 +355,8 @@ jobs:
       ARGOCD_SERVER: "127.0.0.1:8088"
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+      uses: ./.github/actions/checkout-argo-e2e
       - name: Setup Golang
         uses: actions/setup-go@v1
         with:
